# secret-rotation-rs

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: aws_kms_encryptor.rs  backend.rs  diesel_pg_backend.rs  encryptor.rs  lib.rs  local_encryptor.rs  manager.rs  no_op_encryptor.rs  pg_queries.rs  rotator.rs  sqlx_pg_backend.rs  syncer.rs  util.rs
tests/sqlx-migrations/: 0001_create_secret_keys.sql
